[root layer scrolls] Fix find-in-page tickmarks

Tickmarks are calculated based on Document-relative rects but turning on
RLS made these rect Frame-relative since they're "absolute". This patch
explicitly converts them to document coordinates.

Bug: 826219
Change-Id: Id39f1b337f2bebe34587d79398879778ddb864cc
Reviewed-on: https://chromium-review.googlesource.com/986715
Reviewed-by: Stefan Zager <szager@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547008}
Former-commit-id: 62cc7d83fd0870e628bee9a9fad7a470b77e0e3e