third_party/WebKit/Source/core/exported/WebFrameTest.cpp
@@ -11667,6 +11667,57 @@ class WebFrameSimTest : public testing::WithParamInterface<bool>,
 
 INSTANTIATE_TEST_CASE_P(All, WebFrameSimTest, testing::Bool());
 
+TEST_P(WebFrameSimTest, TickmarksDocumentRelative) {
+  WebView().Resize(WebSize(500, 300));
+  WebView().GetPage()->GetSettings().SetTextAutosizingEnabled(false);
+
+  SimRequest request("https://example.com/test.html", "text/html");
+  LoadURL("https://example.com/test.html");
+  request.Complete(R"HTML(
+      <!DOCTYPE html>
+      <style>
+        body, html {
+          width: 4000px;
+          height: 4000px;
+          margin: 0;
+        }
+        div {
+          position: absolute;
+          left: 800px;
+          top: 2000px;
+        }
+      </style>
+      <div>test</div>
+  )HTML");
+
+  Compositor().BeginFrame();
+
+  WebLocalFrameImpl* frame = ToWebLocalFrameImpl(WebView().MainFrame());
+  LocalFrameView* frame_view =
+      ToLocalFrame(WebView().GetPage()->MainFrame())->View();
+
+  frame_view->GetScrollableArea()->SetScrollOffset(ScrollOffset(3000, 1000),
+                                                   kProgrammaticScroll);
+  WebFindOptions options;
+  WebString search_text = WebString::FromUTF8("test");
+  const int kFindIdentifier = 12345;
+  EXPECT_TRUE(frame->Find(kFindIdentifier, search_text, options, false));
+
+  frame->EnsureTextFinder().ResetMatchCount();
+  frame->EnsureTextFinder().StartScopingStringMatches(kFindIdentifier,
+                                                      search_text, options);
+
+  RunPendingTasks();
+
+  // Get the tickmarks for the original find request.
+  Scrollbar* scrollbar = frame_view->CreateScrollbar(kVerticalScrollbar);
+  Vector<IntRect> original_tickmarks;
+  scrollbar->GetTickmarks(original_tickmarks);
+  EXPECT_EQ(1u, original_tickmarks.size());
+
+  EXPECT_EQ(IntPoint(800, 2000), original_tickmarks[0].Location());
+}
+
 TEST_P(WebFrameSimTest, TestScrollFocusedEditableElementIntoView) {
   WebView().Resize(WebSize(500, 300));
   WebView().SetDefaultPageScaleLimits(1.f, 4);
